# CC-232-Cristhyan-Perez

./: EvaluacionParcial.md  README.md
Practicas/Practica_Calificada3/: .gitignore  CMakeLists.txt  README.md
Practicas/Practica_Calificada3/demos/: test_segment_treap.cpp  test_treap.cpp
Practicas/Practica_Calificada3/docs/: bitacora.md
Practicas/Practica_Calificada3/include/: segment_treap.h  solution.h  treap.h
Practicas/Practica_Calificada3/src/: main.cpp  segment_treap.cpp  solution.cpp  treap.cpp
Semana4/: Actividad4-CC232.md
Semana6/: Actividad6.md  Tarea6.md
